# GoogleCloudDemo

./: AGENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
google-api-python-client/: artifact_registry.py  compute_engine.py  start_compute_engine.py
google-cloud-python/: README.md  artifact_registry.py  compute_engine.py  create_compute_engine.py  gcp_auth.py  get_compute_engine.py  restart_compute_engine.py  start_compute_engine.py  stop_compute_engine.py
google-cloud-python/artifact_registry/: artifact_registry.py
google-cloud-python/cloud_sql/: create_cloud_sql.py  list_cloud_sql.py  restart_cloud_sql.py  start_cloud_sql.py  stop_cloud_sql.py
google-cloud-python/compute_engine/: compute_engine.py  create_compute_engine.py  restart_compute_engine.py  start_compute_engine.py  stop_compute_engine.py
google-cloud-python/google_cloud_osconfig/: README.md  create_and_send_command.py  os_policy_assignment.py  send_command.py
