[project]
name = "googleclouddemo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-artifact-registry",
    "google-cloud-compute",
    "google-cloud-logging",
    "google-cloud-os-config",
    "google-auth",
    "requests",
]

[dependency-groups]
dev = [
    "flake8",
]
